feat: Change java language level and target bytecode to 21. Also: Bump lombok to 1.18.44, commons-lang3 to 3.18.0, logback to 1.5.32, maven-compiler-plugin to 3.15.0, maven-surefire-plugin to 3.2.5. Project version is set to 2.0.0-SNAPSHOT.